Use WP Hotelier

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "wp-hotelier-wpml",
-	"description": "Integrate WPML with Hotelier.",
+	"description": "Integrate WPML with WP Hotelier.",
 	"version": "1.0.0",
 	"homepage": "https://wphotelier.com/",
 	"author": "Benito Lopez http://lopezb.com/",
