--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
 		"dist": "rm -rf dist; mkdir -p dist/wp-hotelier-wpml; npm run zip -s"
 	},
 	"devDependencies": {
-		"npm-run-all": "^4.0.2",
-		"wp-pot-cli": "^1.0.1",
-		"onchange": "^3.2.1"
+		"npm-run-all": "^4.1.5",
+		"onchange": "^7.1.0",
+		"wp-pot-cli": "^1.5.0"
 	}
 }
